--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'  //kapt3插件
+
+apply plugin: 'dexknifePlus'
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -13,26 +17,84 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        multiDexEnabled true
     }
     buildTypes {
-        release {
+        debug {
+            buildConfigField 'String', 'URL', '"http://121.199.49.16:8090/"'
+            //applicationIdSuffix ".debug"
+            signingConfig signingConfigs.debug
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+}
+
+dexKnife{
+    //必选参数
+    enabled true //if false,禁用分包插件
+    //可选参数
+    //1.如果没有可选参数，将根据enabled决定是否分包。
+    //2.如果有可选参数，需满足必选参数和可选参数的条件才允许分包
+    productFlavor 'mock'
+    buildType 'debug'
+
+    /*
+    *eg:当前productFlavors = dev，buildType = debug，
+    *参数组合1：enabled = true，productFlavor = dev，buildType = debug 分包
+    *参数组合2：enabled = true，productFlavor = mock，buildType = debug 不分包
+    *参数组合1：enabled = true，buildType = debug 所有buildType = debug分包
+    *参数组合1：enabled = true，productFlavor = dev 所有productFlavor = dev分包
+    * */
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    //implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    //implementation 'com.android.support:appcompat-v7:28.0.0'
+    /*implementation('com.android.support:appcompat-v7:28.0.0') {
+        exclude group: 'com.android.support', module: 'support-v4'
+    }*/
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
+    implementation 'com.google.android.material:material:1.0.0'
+
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.core:core-ktx:1.0.2'
+
     testImplementation 'junit:junit:4.12'
 
-    implementation 'me.yokeyword:fragmentation:1.3.4'
+//    implementation 'me.yokeyword:fragmentation:1.3.4'
+//    implementation 'com.pingerx:fragmentation:andx.1.0.0'
+    implementation(name:'fragmentation', ext:'aar')
+    implementation(name:'fragmentation-core', ext:'aar')
+    implementation(name:'autosize-release', ext:'aar')
+    //implementation 'me.jessyan:autosize:1.1.2'
+
+    implementation 'com.blankj:utilcodex:1.23.7'
+
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
+
+    implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0-alpha2'
+    //implementation 'com.jakewharton.rxbinding3:rxbinding-core:3.0.0-alpha2'
+    implementation 'com.jakewharton.rxbinding3:rxbinding-appcompat:3.0.0-alpha2'
+    //implementation 'com.jakewharton.rxbinding3:rxbinding-material:3.0.0-alpha2'
+    //implementation 'com.squareup.okhttp3:okhttp:3.14.0'
+    //implementation 'com.squareup.okhttp3:logging-interceptor:3.14.0'
+
     implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
     implementation 'com.afollestad.material-dialogs:core:2.8.1'
+
+
+    implementation 'com.google.dagger:dagger:2.22.1'
+    kapt 'com.google.dagger:dagger-compiler:2.22.1'
+
+    implementation 'org.greenrobot:eventbus:3.1.1'
 
 }
